# ScreenGaze

./: .gitignore  LICENSE  README.md  config.json  face_tracker.py  main.py  pyproject.toml  requirements.txt  run.sh
gui/: __init__.py  calibration_dialog.py  main_window.py  theme.py
src/screen_gaze/: __init__.py  main.py
src/screen_gaze/conf/: calibration.json  config.json
src/screen_gaze/core/: face_tracker.py
src/screen_gaze/gui/: __init__.py  calibration_dialog.py  main_window.py
